2006-09-08  Francis Kung  <fkung@redhat.com>

	* java/awt/image/AffineTransformOp.java: Updated documentation.
	(createCompatibleDestRaster): Updated formatting.
	(filter(BufferedImage, BufferedImage)): Updated formatting.
	(filter(Raster, WritableRaster)): Delegated processing to native peers for
	if colour model is compatible.
	(filterBicubic): Get entire pixel at once, and use appropriate array type.
	(filterBilinear): Get entire pixel at once, and use appropriate array type.

2006-09-08  Gary Benson  <gbenson@redhat.com>

	* java/net/InetAddress.java
	(family): Updated javadoc and made private.
	(<init>): Add an address family argument.
	(readObject): Don't overwrite family.
	* java/net/Inet4Address.java
	(AF_INET): New constant.
	(<init>): Use AF_INET as the family.
	(writeReplace): Likewise.
	* java/net/Inet6Address.java
	(AF_INET6): New constant.
	(<init>): Use AF_INET6 as the family.

2006-09-08  Gary Benson  <gbenson@redhat.com>

	* java/net/InetAddress.java
	(getHostName): Move lookup into getCanonicalHostName.
	(getCanonicalHostName): Move lookup from getHostName,
	Perform security check on canonical name (ie after lookup).

2006-09-08  Gary Benson  <gbenson@redhat.com>

	* java/net/Inet4Address.java (isMulticastAddress,
	isLoopbackAddress, isAnyLocalAddress, isLinkLocalAddress,
	isSiteLocalAddress, isMCGlobal, isMCNodeLocal, isMCLinkLocal,
	isMCSiteLocal, isMCOrgLocal, getHostAddress): Moved
	implementations from InetAddress.
	* java/net/InetAddress.java (isMulticastAddress,
	isLoopbackAddress, isAnyLocalAddress, isLinkLocalAddress,
	isSiteLocalAddress, isMCGlobal, isMCNodeLocal, isMCLinkLocal,
	isMCSiteLocal, isMCOrgLocal, getHostAddress): Replace
	implementations with UnsupportedOperationExceptions.
	
2006-09-08  Gary Benson  <gbenson@redhat.com>

	* java/net/InetAddress.java
	(inaddr_any): Removed.
	(ANY_IF, LOCALHOST): Create using getByAddress.
	(<init>): Updated javadoc.
	(getHostName): Cache hostname even if the lookup failed.